--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,9 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-/*
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  */
+}
+
+.shared-flex-row {
+  display: flex;
+  flex-direction: row;
 }
